gcc/testsuite/rust/rustc/ui/parser/keyword-abstract.rs
fn main() {
    let abstract = (); // { dg-error "" "" { target *-*-* } }
}

